--- a/style/index.css
+++ b/style/index.css
@@ -107,6 +107,37 @@
     height: 40px;
     width: 40px;
 }
+
+/* community section */
+#community{
+    text-align: center;
+}
+
+#community-heading{
+    color: #4D4D4D;
+    font-size: 36px;
+    font-weight: 600;
+    padding: 10px 0px;
+}
+.community-card{
+    height: 299px;
+    width: 260px;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    padding: 20px 0;
+}
+.community-card-heading{
+    font-size: 28px;
+    font-weight: 700px;
+    padding: 20px 0;
+    color:  #4D4D4D;
+}
+#community-allcard{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    padding: 50px 10%;
+}
 /*..........................................*/
 /* Responsive section */
 
