--- a/style/index.css
+++ b/style/index.css
@@ -198,7 +198,33 @@
     line-height: 44px;
     color:  #4D4D4D;
 }
+/* Design section */
 
+#design{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    padding: 80px 10%;
+}
+
+#design-text{
+    width: 661px;
+    height: 268px;
+    padding: 20px 10%;
+}
+#design-heading{
+    font-size: 36px;
+    font-weight: 600;
+    color: #4D4D4D ;
+    
+}
+#design-pragraph{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    padding: 20px 0;
+}
 /*..........................................*/
 /* Responsive section */
 
