added customer section

--- a/style/index.css
+++ b/style/index.css
@@ -14,6 +14,9 @@
     color: white ;
     background-color:#4CAF4F ;
 }
+span{
+    color:#4CAF4F;
+ }
 /* Header Section */
 /* navigation bar section */
 #nav-bar{
@@ -71,9 +74,7 @@
  #hero-pragraph{
     padding: 20px 0px;
  }
- span{
-    color:#4CAF4F;
- }
+ 
  #hero{
     background-color: #F5F7FA;
     display: flex;
@@ -225,6 +226,41 @@
     line-height: 20px;
     padding: 20px 0;
 }
+/* customer section */
+#customer{
+    background-color:  #F5F7FA;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+    padding: 80px 10%;
+}
+#customer-text{
+
+    width: 748px;
+    height: 244px;
+}
+#customer-icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+#customer-pragraph{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #4D4D4D  ;
+    margin: 10px 0;
+}
+#customer-title{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: rgb(149, 145, 145);
+    margin: 10px 0;
+}
+
 /*..........................................*/
 /* Responsive section */
 
